--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 ansi_term = "0.12.1"
 argh = "0.1.10"
 json_to_table = { version = "0.5.0", features = ["color"] }
+lru = "0.10.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 rustyline = { version = "11.0.0", features = ["case_insensitive_history_search", "derive", "with-fuzzy"] }
 serde_json = "1.0.96"
