--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ansi_term = "0.12.1"
 argh = "0.1.10"
+html5ever = "0.26.0"
 json_to_table = { version = "0.5.0", features = ["color"] }
 lru = "0.10.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
