--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "may"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A CLI application for testing REST APIs"
+readme = "README.md"
+homepage = "https://github.com/basicfunc/may"
+repository = "https://github.com/basicfunc/may"
+license-file = "LICENSE"
+keywords = ["api", "testing", "development", "backend", "rest-api", "developer-tools", "tools"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 ansi_term = "0.12.1"
 argh = "0.1.10"
-html5ever = "0.26.0"
 json_to_table = { version = "0.5.0", features = ["color"] }
 lru = "0.10.0"
 reqwest = { version = "0.11.18", features = ["blocking", "json"] }
